# lattice_ml

./: INSTALL  README.md  pyproject.toml  setup.py
examples/diffusion/: SU2_matrix.ipynb  SU3_gauge_16x16_b4.ipynb  SU3_gauge_16x16_b6.ipynb  SU3_gauge_4x4x4x4 copy.ipynb  SU3_gauge_4x4x4x4.ipynb  SU3_gauge_4x4x4x4_b4.ipynb  SU3_gauge_4x4x4x4_beta3.ipynb  SU3_gauge_unet_4x4x4x4.ipynb  SU3_hmc_2dim.ipynb  SU3_matrix.ipynb  diffusion-model_1dof.ipynb  score_fn_state_dict.pt
examples/diffusion/matrix_models/: SU2_matrix.ipynb  SU3_matrix.ipynb
examples/flow_matching/: SU2_matrix.ipynb  SU3_gauge_4x4x4x4.ipynb  SU3_gauge_4x4x4x4_conv.ipynb  SU3_gauge_4x4x4x4_unet.ipynb  SU3_matrix.ipynb  flow_matching_SU2.ipynb  flow_matching_SU3.ipynb  result
examples/monte_carlo/: run_gauge_hmc.py  run_prelink_hmc.py
src/lattice_ml/: __init__.py
src/lattice_ml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/lattice_ml/diffusion/: __init__.py  _diffusion_model.py  _lie_diffusion_process.py  _noise_schedule.py  _sde_schedule.py  _trainer.py
src/lattice_ml/flow_matching/: __init__.py  _dataset.py  _flow_matching.py  _lie_trainer.py  _trainer.py
src/lattice_ml/functions/: __init__.py  _matrix_func.py  _matrix_func_and_jacobian.py  _project.py
src/lattice_ml/gauge_tools/: __init__.py  gauge_action.py  gauge_action_u1.py  gauge_downsampler_debug.py  gauge_downsampler_debug2.py.py  gauge_equivariant_layers.py  gauge_link_conv.py  gauge_link_conv_time.py  gauge_link_smear.py  gauge_sampler_debug.py  gauge_unet.py  gauge_upsampler_debug.py  loop_debug.py  time_embedding.py  (+5 more)
(+62 files in other folders)
